--- a/styles/style.css
+++ b/styles/style.css
@@ -13,13 +13,45 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  display: flex;
   /* parameters for the header section */
+}
+
+.logo {
+  z-index: 3;
+}
+
+.logo_place_header {
+  width: 154px;
+  height: 31px;
+  position: absolute;
+   top: 30px;
+   left: 64px;
+}
+.header__title {
+  width: 730px;
+  align-self: center;
+  margin: 0 0 0 64px;
+  z-index: 3;
+}
+
+.header__subtitle {
+  width: 388px;
+  position: absolute;
+    bottom: 30px;
+    left: 64px;
+  z-index: 3;
+}
+
+.header__main-illustration {
+
 }
 
 /* here we have two examples of selectors in order to remind you how to set styles for elements */
 .header__square-pic {
   height: 568px;
   width: 568px;
+  color: #2f8oed;
 }
 
 /* including elements with key-value modifiers */
