--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,18 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
+h1, h2, h3, p, span {
+  margin: 0;
+}
+
+.list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
 .header {
+  background-color: #f2f2f2;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
@@ -34,6 +45,9 @@
   align-self: center;
   margin: 0 0 0 64px;
   z-index: 3;
+  line-height: 96px;
+  font-size: 102px;
+  font-weight: bold;
 }
 
 .header__subtitle {
@@ -42,6 +56,9 @@
     bottom: 30px;
     left: 64px;
   z-index: 3;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
 }
 
 .header__main-illustartion {
@@ -50,16 +67,64 @@
   position: absolute;
     bottom: 0;
     right: 0;
+  z-index: 2;
 }
 
-/* here we have two examples of selectors in order to remind you how to set styles for elements */
 .header__square-pic {
   height: 568px;
   width: 568px;
-  color: #2f8oed;
+  background-color: #2f80ed;
+  position: absolute;
+    top: 64px;
+    right: 0;
+  z-index: 1;
 }
 
-/* including elements with key-value modifiers */
+.description {
+  margin: 100px 0;
+  display: flex;
+  /* including elements with key-value modifiers */
+}
+
+.two-columns {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  min-width: 784px;
+  margin: auto;
+}
+
+.two-columns__brief {
+  margin: 0;
+  width: 175px;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  color: #2f80ed;
+}
+
+.two-columns__main-text {
+  margin: 0;
+  width: 80%;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.two-columns__paragraph {
+  margin: 0 0 30px 0;
+}
+
+.two-columns__paragraph:last-of-type {
+  margin-bottom: 0;
+}
+
+.two-columns__span-accent {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: bold;
+}
+
 .table__cell_theme_dark {
   width: 200px;
   color: white;
