--- a/styles/style.css
+++ b/styles/style.css
@@ -40,6 +40,7 @@ h1, h2, h3, p, span {
    top: 30px;
    left: 64px;
 }
+
 .header__title {
   width: 730px;
   align-self: center;
@@ -125,9 +126,140 @@ h1, h2, h3, p, span {
   font-weight: bold;
 }
 
+.digits {
+  margin: 0 0 100px;
+  display: flex;
+  flex-direction: column;
+}
+
+.digits__cell_space {
+  margin: 60px 0 0;
+}
+
+.digits__title_space {
+  margin: 0 auto 20px; 
+}
+
+.section-title {
+  width: 60%;
+  text-align: center;
+  line-height: 69px;
+  font-size: 60px;
+  font-weight: bold;
+}
+
+.section-subtitle {
+  width: 60%;
+  margin: 0 auto;
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.table {
+  width: 1100px;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.table__cell {
+  width: 250px;
+}
+
+.table__heading {
+  margin: 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+
+.table__text {
+  margin: 20px 0 0;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.feynman {
+  height: 790px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  background-color: #f2f2f2;
+}
+
+.feynman__title {
+  width: 775px;
+  text-align: center;
+  margin: 100px auto 0;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+  z-index: 1;
+}
+
+.feynman__subtitle {
+  margin: 70px auto 0;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  z-index: 1;
+}
+
+.feynman__link {
+  position: absolute;
+  right: 48px;
+  top: 50%;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  z-index: 1;
+}
+
+.feynman__image {
+  width: 867px;
+  height: 627px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.kaufman {
+  background-color: #1f1f1f;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  padding: 0 0 90px;
+}
+
+.section-title__theme_dark {
+  color: white;
+  margin: 90px auto 20px; 
+}
+
+.section-subtitle__theme_dark {
+  color: white;
+}
+
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
+  z-index: 1;
+}
+
+.kaufman__triangle {
+  width: 660px;
+  height: 636px;
+  position: absolute;
+    right: -124px;
+    top: 0;
+    z-index: 0;
 }
