--- a/styles/style.css
+++ b/styles/style.css
@@ -15,10 +15,6 @@
   margin: 0;
 }
 
-.bright-text {
-  color: white;
-}
-
 .header {
   background-color: #f2f2f2;
   height: 100vh;
@@ -81,6 +77,10 @@
   z-index: 0;
 }
 
+.header__link {
+  color: #2F80ed;
+  text-decoration: none;
+}
 .description {
   padding: 100px 0;
   display: flex;
@@ -132,20 +132,13 @@
   flex-direction: column;
 }
 
-.digits__cell_space {
-  margin: 60px 0 0;
-}
-
-.digits__title_space {
-  margin: 0 auto 20px; 
-}
-
 .section-title {
   width: 60%;
   text-align: center;
   line-height: 69px;
   font-size: 60px;
   font-weight: bold;
+  margin: 0 auto 20px;
 }
 
 .section-subtitle {
@@ -164,10 +157,14 @@
   margin: 0 auto;
   flex-direction: row;
   justify-content: space-between;
+  list-style: none;
+  padding: 0;
+  margin: 0 auto;
 }
 
 .table__cell {
   width: 250px;
+  margin: 60px 0 0;
 }
 
 .table__heading {
@@ -176,7 +173,6 @@
   font-size: 24px;
   font-weight: bold;
 }
-
 
 .table__text {
   margin: 20px 0 0;
@@ -219,6 +215,8 @@
   font-size: 36px;
   font-weight: normal;
   z-index: 1;
+  text-decoration: none;
+  color: #2f80ed;
 }
 
 .feynman__image {
@@ -236,15 +234,16 @@
   display: flex;
   flex-direction: column;
   padding: 0 0 90px;
+  position: relative;
 }
 
-.section-title__theme_dark {
+.section-title_theme_dark {
   color: white;
   margin: 90px auto 20px;
   z-index: 1;
 }
 
-.section-subtitle__theme_dark {
+.section-subtitle_theme_dark {
   color: white;
   z-index: 1;
 }
@@ -258,12 +257,13 @@
 }
 
 .kaufman__triangle {
+  background-image: url(../images/kaufman-triangle.svg);
   width: 660px;
   height: 636px;
   position: absolute;
-    right: -124px;
-    top: 0;
-    z-index: 0;
+   top: 0;
+   right: -124px;
+  overflow: hidden;
 }
 
 .footer {
@@ -287,6 +287,14 @@
   justify-content: space-between;
 }
 
+.footer__column-heading {
+  color: white;
+  margin: 0 0 20px;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
 .logo_place_footer {
   width: 183px;
   height: 35px;
@@ -297,6 +305,7 @@
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
+  color: white;
 }
 
 .footer__column_content_about {
@@ -308,13 +317,10 @@
   display: flex;
   flex-flow: column;
   justify-content: center;
-}
-
-.column-heading {
-  margin: 0 0 20px;
-  line-height: 30px;
-  font-size: 18px;
-  font-weight: bold;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  color: white;
 }
 
 .footer__column-link {
@@ -322,6 +328,7 @@
   font-size: 18px;
   font-weight: normal;
   text-decoration: none;
+  color: white;
 }
 
 .footer__column_content_social {
