--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,6 +1,10 @@
 .cards {
+  width: 920px;
   display: flex;
   flex-flow: row wrap;
+  margin: 0 0;
+  padding: 0 0;
+  list-style: none;
 }
 
 .cards::after {
