--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -1,6 +1,6 @@
 .khan__buy-link{
-  line-height: 1.15;
-  font-size: 24px;
+  line-height: 42px;
+  font-size: 30px;
   font-weight: normal;
   align-self: flex-start;
 }
