--- a/blocks/description/description.css
+++ b/blocks/description/description.css
@@ -1,5 +1,7 @@
 .description {
   padding: 100px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   /* including elements with key-value modifiers */
 }
