--- a/blocks/digits/digits.css
+++ b/blocks/digits/digits.css
@@ -1,5 +1,10 @@
 .digits {
   padding: 100px 0 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
