--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -1,7 +1,12 @@
 .feynman {
   min-height: 790px;
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   background-color: #f2f2f2;
 }
