--- a/blocks/footer/__column/footer__column.css
+++ b/blocks/footer/__column/footer__column.css
@@ -1,4 +1,9 @@
 .footer__column {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-flow: column;
   flex-flow: column;
 }
