--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,9 @@
 .footer {
   min-height: 350px;
   background-color: #1f1f1f;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -ms-flex-line-pack: stretch;
   align-content: stretch;
 }
