--- a/blocks/header/__square-pic/header__square-pic.css
+++ b/blocks/header/__square-pic/header__square-pic.css
@@ -3,8 +3,10 @@
   width: 568px;
   background-color: #2f80ed;
   position: absolute;
-    top: 64px;
-    right: 0;
+  top: 64px;
+  right: 0;
   z-index: 0;
+  -webkit-transform: rotate(-15deg);
+  -ms-transform: rotate(-15deg);
   transform: rotate(-15deg);
 }
