--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,6 +3,8 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   position: relative;
   overflow: hidden;
