--- a/blocks/khan/__book-container/khan__book-container.css
+++ b/blocks/khan/__book-container/khan__book-container.css
@@ -1,4 +1,6 @@
 .khan__book-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   /*background-image: url(../../../images/khan-book-2.png);*/
 }
