--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -1,6 +1,7 @@
-.khan__buy-link{
+.khan__buy-link {
   line-height: 42px;
   font-size: 30px;
   font-weight: normal;
+  -ms-flex-item-align: start;
   align-self: flex-start;
 }
