--- a/blocks/khan/khan.css
+++ b/blocks/khan/khan.css
@@ -1,6 +1,11 @@
 .khan {
   background-color: #f2f2f2;
   padding: 105px 0 0 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
